[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-live-weather"
version = "1.0.0"
description = "A lightweight plugin for Endstone that turns your Minecraft world into a live weather mirror of a city or region in the real world."

[project.entry-points."endstone"]
live_weather = "endstone_live_weather:LiveWeather"